<resources>
    <string name="app_name">MarketSim</string>

    <string-array name="langSpinner">
        <item>🇺🇸 english</item>
        <item>🇹🇷 turkish</item>
    </string-array>

    <string name="profileButton">Go to Profile</string>
    <string name="cartButton">Go to Cart</string>
    <string name="search">Search</string>
    <string name="productName">Product Name</string>
    <string name="addCartBtn">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="orderTotal">Order Total: </string>
    <string name="orderDiscounted">Discounted Total: </string>
    <string name="useCoupon">Use Coupon</string>
    <string name="chooseCoupon">Choose a Coupon</string>
    <string name="ok">OK</string>

    <string name="un">Username</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="updateProfileBtn">Update Profile</string>
    <string name="updateCancelBtn">Cancel</string>

    <string name="lblLang">Language</string>
    <string name="lblProfile">Profile</string>
    <string name="changePhoto">Change Photo</string>
    <string name="coupon">Coupons</string>
    <string name="btn_game">Emir\'s Magnificent Game</string>

    <string name="tap_to_start">Tap to Start</string>
    <string name="game_over">Game Over</string>
    <string name="tap_to_restart">Tap to Restart</string>
    <string name="paused">PAUSED</string>
    <string name="tap_to_resume">Tap again to resume</string>
    <string name="score">Score: </string>
    <string name="gameDialogTitle">Congrats !</string>
    <string name="gameDialogText">You won a coupon !</string>
    <string name="gameDialogOK">OK</string>


</resources>